Add stable/rocky branches for client libs
This adds stable/rocky branching for client libraries that missed
branching during the deadline.

Change-Id: Idd10518008d13ac08b4e78598310c2cc9528ded3
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/deliverables/rocky/python-aodhclient.yaml
+++ b/deliverables/rocky/python-aodhclient.yaml
@@ -17,3 +17,6 @@ releases:
         tarball-base: aodhclient
 repository-settings:
   openstack/python-aodhclient: {}
+branches:
+  - location: 1.1.1
+    name: stable/rocky
