--- a/deliverables/rocky/python-barbicanclient.yaml
+++ b/deliverables/rocky/python-barbicanclient.yaml
@@ -10,3 +10,6 @@ releases:
     version: 4.7.0
 repository-settings:
   openstack/python-barbicanclient: {}
+branches:
+  - location: 4.7.0
+    name: stable/rocky
