--- a/deliverables/rocky/python-cinderclient.yaml
+++ b/deliverables/rocky/python-cinderclient.yaml
@@ -23,3 +23,6 @@ releases:
       - hash: 460229c6099719dec0d027f798f9c751b8ec7e44
         repo: openstack/python-cinderclient
     version: 4.0.1
+branches:
+  - location: 4.0.1
+    name: stable/rocky
