--- a/deliverables/rocky/python-heatclient.yaml
+++ b/deliverables/rocky/python-heatclient.yaml
@@ -19,3 +19,6 @@ releases:
         hash: b5f3d34cd009445de9a6489828faad7ec624a1a6
 repository-settings:
   openstack/python-heatclient: {}
+branches:
+  - location: 1.16.1
+    name: stable/rocky
