--- a/deliverables/rocky/python-neutronclient.yaml
+++ b/deliverables/rocky/python-neutronclient.yaml
@@ -15,3 +15,6 @@ releases:
       - hash: d090ea27510db3903e3256ca518b645987edfdc7
         repo: openstack/python-neutronclient
     version: 6.9.0
+branches:
+  - location: 6.9.0
+    name: stable/rocky
