--- a/deliverables/rocky/python-qinlingclient.yaml
+++ b/deliverables/rocky/python-qinlingclient.yaml
@@ -19,3 +19,6 @@ releases:
     projects:
       - repo: openstack/python-qinlingclient
         hash: bb21ea9249e73574443d39045090b5770a468c33
+branches:
+  - location: 2.0.0
+    name: stable/rocky
