--- a/deliverables/rocky/python-saharaclient.yaml
+++ b/deliverables/rocky/python-saharaclient.yaml
@@ -15,3 +15,6 @@ releases:
         hash: 2a66f9a7150cd92e45f29bb028b60863a27fa443
 repository-settings:
   openstack/python-saharaclient: {}
+branches:
+  - location: 2.0.0
+    name: stable/rocky
