--- a/deliverables/rocky/python-troveclient.yaml
+++ b/deliverables/rocky/python-troveclient.yaml
@@ -15,3 +15,6 @@ releases:
       - hash: 3adf5fe392102c088b72c4dac6f10eaf1f0e7983
         repo: openstack/python-troveclient
     version: 2.16.0
+branches:
+  - location: 2.16.0
+    name: stable/rocky
