--- a/deliverables/rocky/python-watcherclient.yaml
+++ b/deliverables/rocky/python-watcherclient.yaml
@@ -19,3 +19,6 @@ releases:
     projects:
       - repo: openstack/python-watcherclient
         hash: 6681724daa2155364a1ef131157d19561209f23f
+branches:
+  - location: 2.1.0
+    name: stable/rocky
