--- a/deliverables/rocky/osc-placement.yaml
+++ b/deliverables/rocky/osc-placement.yaml
@@ -19,3 +19,6 @@ releases:
       - hash: 9577cd899541b4c2a5b9fa74a59f4c346bd5addf
         repo: openstack/osc-placement
     version: 1.3.0
+branches:
+  - location: 1.3.0
+    name: stable/rocky
