--- a/deliverables/rocky/python-brick-cinderclient-ext.yaml
+++ b/deliverables/rocky/python-brick-cinderclient-ext.yaml
@@ -11,3 +11,6 @@ releases:
       - hash: ca2a0e4db6e12c2ef861c5a7ed0c0c2498f50015
         repo: openstack/python-brick-cinderclient-ext
     version: 0.9.0
+branches:
+  - location: 0.9.0
+    name: stable/rocky
