--- a/deliverables/rocky/python-keystoneclient.yaml
+++ b/deliverables/rocky/python-keystoneclient.yaml
@@ -15,3 +15,6 @@ team: keystone
 type: client-library
 repository-settings:
   openstack/python-keystoneclient: {}
+branches:
+  - location: 3.17.0
+    name: stable/rocky
