--- a/deliverables/rocky/python-cinderclient.yaml
+++ b/deliverables/rocky/python-cinderclient.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: e76c4958ea779a44f2d0351616c94b627aebe0fe
         repo: openstack/python-cinderclient
     version: 4.0.0
+  - projects:
+      - hash: 460229c6099719dec0d027f798f9c751b8ec7e44
+        repo: openstack/python-cinderclient
+    version: 4.0.1
