--- a/deliverables/rocky/openstack-ansible.yaml
+++ b/deliverables/rocky/openstack-ansible.yaml
@@ -135,3 +135,7 @@ releases:
       - hash: 38b333ba306cd86f24a7c72ab466da3d389156d4
         repo: openstack/openstack-ansible
     version: 18.0.0.0b2
+  - projects:
+      - hash: a75af3e6fd6162046fcfc80f5bfc109100cdd25d
+        repo: openstack/openstack-ansible
+    version: 18.0.0.0b3
