Releasing sahara-extra 9.2.0
Change-Id: Ifaeee0cbf99f2795b60895e6553fd446bec43f52

--- a/deliverables/rocky/sahara-extra.yaml
+++ b/deliverables/rocky/sahara-extra.yaml
@@ -12,6 +12,10 @@ releases:
     projects:
       - repo: openstack/sahara-extra
         hash: c118e53a8e85ca93f3aa5e8f268c934f325c679a
+  - version: 9.2.0
+    projects:
+      - repo: openstack/sahara-extra
+        hash: abacf8f2d43b0b5d2769849d48e78120c58fe163
 repository-settings:
   openstack/sahara-extra: {}
 branches:
