Oslo Queens releases
Just a couple of bug fixes that were backported.

Change-Id: Id6fae3284f09a71c224e3192986243b86c33dfbc

--- a/deliverables/queens/oslo.policy.yaml
+++ b/deliverables/queens/oslo.policy.yaml
@@ -53,6 +53,10 @@ releases:
       - hash: 4f68708a495fa2237b62491e355db99fac1f7edb
         repo: openstack/oslo.policy
     version: 1.33.1
+  - projects:
+      - hash: 77d30c3b5e06a4cc90195ca6f352b26c4bf2d2d8
+        repo: openstack/oslo.policy
+    version: 1.33.2
 branches:
   - name: stable/queens
     location: 1.33.1
