--- a/deliverables/queens/oslo.messaging.yaml
+++ b/deliverables/queens/oslo.messaging.yaml
@@ -33,6 +33,10 @@ releases:
       - hash: 1ccdccddaa838a4715fd21e8eb67e207d172c240
         repo: openstack/oslo.messaging
     version: 5.35.0
+  - projects:
+      - hash: eea496b2ec8ba87c8519a79fdb3311e25e833422
+        repo: openstack/oslo.messaging
+    version: 5.35.1
 branches:
   - name: stable/queens
     location: 5.35.0
