Oslo Pike releases
Change-Id: I9f929b79cc780e95635882379ace8e31972e8e40

--- a/deliverables/pike/oslo.messaging.yaml
+++ b/deliverables/pike/oslo.messaging.yaml
@@ -77,6 +77,10 @@ releases:
       - hash: 623ba0d0e6858a52cb40d3532f9e12335e53c390
         repo: openstack/oslo.messaging
     version: 5.30.3
+  - projects:
+      - hash: 2a567ca60715beaf213c13f6dfd4e1af55279cda
+        repo: openstack/oslo.messaging
+    version: 5.30.4
 branches:
   - name: stable/pike
     location: 5.30.0
