--- a/deliverables/pike/oslo.policy.yaml
+++ b/deliverables/pike/oslo.policy.yaml
@@ -51,6 +51,10 @@ releases:
       - hash: cb9ab34cd40a7cd9eff0e40ccc2df4ee88edae4e
         repo: openstack/oslo.policy
     version: 1.25.2
+  - projects:
+      - hash: 3e3820600174a67933cc1dd986066354bf3c25d3
+        repo: openstack/oslo.policy
+    version: 1.25.3
 team: oslo
 type: library
 repository-settings:
