add rocky-3 milestone tags for projects that missed
Per the discussion in the team meeting on 3 Aug, these tags are being
forced for the projects that missed the third milestone.

Change-Id: Id51cb6a3b1a4213268297ff505ed860b2383ca90
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/rocky/cinder.yaml
+++ b/deliverables/rocky/cinder.yaml
@@ -12,6 +12,9 @@ releases:
       - hash: 875596b4ea74b998297b00a1891f5453d3b66c56
         repo: openstack/cinder
     version: 13.0.0.0b2
-
+  - projects:
+      - hash: cbee6066e4ff92addf3452114f6f6be355a6ac40
+        repo: openstack/cinder
+    version: 13.0.0.0b3
 repository-settings:
   openstack/cinder: {}
