--- a/deliverables/rocky/designate.yaml
+++ b/deliverables/rocky/designate.yaml
@@ -16,3 +16,7 @@ releases:
       - hash: a62fbca5947bc8d71821218d21b9c503557c2d5e
         repo: openstack/designate
     version: 7.0.0.0b2
+  - projects:
+      - hash: 116d0a4b8efa9cccb31f86deed3ebe90a0c8174b
+        repo: openstack/designate
+    version: 7.0.0.0b3
