--- a/deliverables/rocky/mistral.yaml
+++ b/deliverables/rocky/mistral.yaml
@@ -21,6 +21,14 @@ releases:
       - hash: c78bdbb95b1ab3325c42535ac2a6538e5e554b9d
         repo: openstack/mistral-extra
     version: 7.0.0.0b2
+  - projects:
+      - hash: 952967a019ba2af6b3c7b661addb59d5f4187f24
+        repo: openstack/mistral
+      - hash: 04c32537f7925aaeb54d8d7aa6da34ce85479c2c
+        repo: openstack/mistral-dashboard
+      - hash: 0d193dab2b4e13b06fd8822308c3aee202e370c4
+        repo: openstack/mistral-extra
+    version: 7.0.0.0b3
 repository-settings:
   openstack/mistral: {}
   openstack/mistral-dashboard: {}
