--- a/deliverables/rocky/designate-dashboard.yaml
+++ b/deliverables/rocky/designate-dashboard.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: e8fb9f75fb2e73873db9d0ad9757460c2e7a7917
         repo: openstack/designate-dashboard
     version: 7.0.0.0b2
+  - projects:
+      - hash: e41d74a03d46d678c3e86bf98703bcc16dff71f6
+        repo: openstack/designate-dashboard
+    version: 7.0.0.0b3
