TripleO queens release
Change-Id: I7be19d1f9ddeb8ec214b5238dbc390cd360ece9a

--- a/deliverables/queens/puppet-tripleo.yaml
+++ b/deliverables/queens/puppet-tripleo.yaml
@@ -36,6 +36,10 @@ releases:
       - hash: 15a81ad902728cf75750fad9bde3f8439a99f913
         repo: openstack/puppet-tripleo
     version: 8.3.4
+  - projects:
+      - hash: 1628943271b647f9eb088a565f7d10fd1f3aa5e2
+        repo: openstack/puppet-tripleo
+    version: 8.3.5
 repository-settings:
   openstack/puppet-tripleo: {}
 branches:
