--- a/deliverables/queens/python-tripleoclient.yaml
+++ b/deliverables/queens/python-tripleoclient.yaml
@@ -40,6 +40,10 @@ releases:
       - hash: 7c518a40d9bd2cc41e29b04c4e89d76f8eeae376
         repo: openstack/python-tripleoclient
     version: 9.2.3
+  - projects:
+      - hash: 87d25a3cdec23c1f6e4274489b4f5e8ff9f0860a
+        repo: openstack/python-tripleoclient
+    version: 9.2.4
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/queens.html
 repository-settings:
   openstack/python-tripleoclient: {}
