--- a/deliverables/queens/tripleo-common.yaml
+++ b/deliverables/queens/tripleo-common.yaml
@@ -45,6 +45,10 @@ releases:
       - hash: 2ab80799a5423b49dbf5a0b56447b4301bfd9297
         repo: openstack/tripleo-common
     version: 8.6.3
+  - projects:
+      - hash: 878e5376d3a72afb851108a92c50dfa9c15ee6f8
+        repo: openstack/tripleo-common
+    version: 8.6.4
 cycle-highlights:
   - |
     config-download: Ability to use Ansible to apply the cloud configuration.
