--- a/deliverables/queens/tripleo-heat-templates.yaml
+++ b/deliverables/queens/tripleo-heat-templates.yaml
@@ -46,6 +46,10 @@ releases:
       - hash: 1c58bba26884a21b08bea2d6fe6e6f1f63ff1360
         repo: openstack/tripleo-heat-templates
     version: 8.0.4
+  - projects:
+      - hash: 300f6f3b765680efa234bdfd0ddc500ef9e3d83c
+        repo: openstack/tripleo-heat-templates
+    version: 8.0.5
 repository-settings:
   openstack/tripleo-heat-templates: {}
 branches:
