--- a/deliverables/queens/instack-undercloud.yaml
+++ b/deliverables/queens/instack-undercloud.yaml
@@ -37,6 +37,10 @@ releases:
       - hash: e4693063ead7b3c0d2edcbcbc8757b06f664bc64
         repo: openstack/instack-undercloud
     version: 8.4.3
+  - projects:
+      - hash: 2f32d629d2c43b0f4148b2ef2c40a659233e0baf
+        repo: openstack/instack-undercloud
+    version: 8.4.4
 repository-settings:
   openstack/instack-undercloud: {}
 branches:
