TripleO pike release
Change-Id: I0589c2500f0ba7f13830921f63f77e2beefaebb4

--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -82,6 +82,10 @@ releases:
       - hash: 4446d46e3d70d513e6c662af3726efd77ee1a28e
         repo: openstack/instack-undercloud
     version: 7.4.13
+  - projects:
+      - hash: 9e5153e909ff8bddd28227b370d9def33daa6c6e
+        repo: openstack/instack-undercloud
+    version: 7.4.14
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/instack-undercloud/pike.html
