--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -66,6 +66,10 @@ releases:
       - hash: 77b99d617d7406994ba2318c509270163f3c5c67
         repo: openstack/python-tripleoclient
     version: 7.3.11
+  - projects:
+      - hash: fe1c0092755ab910b6b900d47dfc9e1e9cc5abd6
+        repo: openstack/python-tripleoclient
+    version: 7.3.12
 team: tripleo
 type: library
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/pike.html
