--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -94,6 +94,10 @@ releases:
       - hash: d92b678ca1ca83c97e369a9f72142583c986d785
         repo: openstack/tripleo-common
     version: 7.6.14
+  - projects:
+      - hash: 6f15c96eb0d14a891fc0db3ede20b77622a4573b
+        repo: openstack/tripleo-common
+    version: 7.6.15
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-common/pike.html
