--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -87,6 +87,10 @@ releases:
       - hash: af4661905b7d7281a4e8db5656844e80e1753702
         repo: openstack/tripleo-heat-templates
     version: 7.0.14
+  - projects:
+      - hash: 541a525924ee4c06e823ce52e97fc93b260877f1
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.15
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-heat-templates/pike.html
