--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -81,6 +81,10 @@ releases:
       - hash: 5a0b738d513890122d79376eb720fb00ec134fd8
         repo: openstack/puppet-tripleo
     version: 7.4.14
+  - projects:
+      - hash: da382cdf991bc3b3d9e0d56b20229f29507632a2
+        repo: openstack/puppet-tripleo
+    version: 7.4.15
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/puppet-tripleo/pike.html
