TripleO ocata release
Change-Id: I64e4f2bc0dbbb259c72e5a1b0c7604b10fdcd035

--- a/deliverables/ocata/puppet-tripleo.yaml
+++ b/deliverables/ocata/puppet-tripleo.yaml
@@ -86,6 +86,10 @@ releases:
       - hash: 6e0ee312234c5b324950e04d2c85ef5879a520e0
         repo: openstack/puppet-tripleo
     version: 6.5.14
+  - projects:
+      - hash: cf7d557c0ff2a6c1a1cdb00aab94fb359fe6442a
+        repo: openstack/puppet-tripleo
+    version: 6.5.15
 team: tripleo
 type: other
 repository-settings:
