--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -96,6 +96,10 @@ releases:
       - hash: 4ec837e39c7434af8f227ec8ee0b8bb7dc82b90d
         repo: openstack/tripleo-heat-templates
     version: 6.2.15
+  - projects:
+      - hash: 98c410c79a21b0c95c3d6c8ab17863bf9e32828e
+        repo: openstack/tripleo-heat-templates
+    version: 6.2.16
 team: tripleo
 type: other
 repository-settings:
