--- a/deliverables/queens/openstack-ansible.yaml
+++ b/deliverables/queens/openstack-ansible.yaml
@@ -861,6 +861,10 @@ releases:
       - hash: 44c98893b48693d17231842e33336e6575bd4a31
         repo: openstack/openstack-ansible
     version: 17.0.7
+  - projects:
+      - hash: ccb0f302e12197aaf76ab74b2f5252d0945a2422
+        repo: openstack/openstack-ansible
+    version: 17.0.8
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
