--- a/deliverables/pike/openstack-ansible.yaml
+++ b/deliverables/pike/openstack-ansible.yaml
@@ -1576,6 +1576,10 @@ releases:
       - hash: 0e03f46a2ebb0ffc6f12384f19ec1184434e7a09
         repo: openstack/openstack-ansible
     version: 16.0.16
+  - projects:
+      - hash: 360c14cffc09533d9aba03c44b1080a87323bdc9
+        repo: openstack/openstack-ansible
+    version: 16.0.17
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
