--- a/deliverables/ocata/openstack-ansible.yaml
+++ b/deliverables/ocata/openstack-ansible.yaml
@@ -2204,6 +2204,10 @@ releases:
       - hash: f69a336501ba1533ee568cbc83d06fadf7441dbc
         repo: openstack/openstack-ansible
     version: 15.1.24
+  - projects:
+      - hash: 693d3d63c1b43ebdc6eb2c691e2748ecac4bf3ca
+        repo: openstack/openstack-ansible
+    version: 15.1.25
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
