--- a/deliverables/_independent/os-service-types.yaml
+++ b/deliverables/_independent/os-service-types.yaml
@@ -10,5 +10,9 @@ releases:
     projects:
       - repo: openstack/os-service-types
         hash: 7b28fd3c262d87917f38ba39708aebd43b642c56
+  - version: 1.3.0
+    projects:
+      - repo: openstack/os-service-types
+        hash: 2e5b38088a43539621de82aa2d0c1b366c2638a9
 repository-settings:
   openstack/os-service-types: {}
