--- a/deliverables/rocky/qinling.yaml
+++ b/deliverables/rocky/qinling.yaml
@@ -18,3 +18,18 @@ releases:
     projects:
       - repo: openstack/qinling
         hash: 71d9158e7c833171c38f2d43ff7e9a57f2f909b3
+  - version: 1.0.0.0rc1
+    projects:
+      - repo: openstack/qinling
+        hash: 9d6bd96f9c70e6870fd67c55467526e365fb0ecc
+branches:
+  - location: 1.0.0.0rc1
+    name: stable/rocky
+cycle-highlights:
+  - Support function versioning so that users can create different versions of a same purpose function.
+  - Support function alias which is a pointer to a specific Qinling function version and can be updated to point to a different version.
+  - Use secure connection to Kubernetes cluster in the default deployment.
+  - Support to define untrusted workload for the runtime.
+  - Node.JS runtime support(experimental).
+  - Python runtime security improvement.
+  - Document improvement.
