--- a/deliverables/rocky/openstacksdk.yaml
+++ b/deliverables/rocky/openstacksdk.yaml
@@ -34,6 +34,10 @@ releases:
       - hash: f28a1b09794f62232f2bc74a3d0ade5bbf84f812
         repo: openstack/openstacksdk
     version: 0.17.1
+  - projects:
+      - hash: 3ad9dabe5593c02a435fb6e505826af0b874751e
+        repo: openstack/openstacksdk
+    version: 0.17.2
 repository-settings:
   openstack/openstacksdk: {}
 branches:
