[rally] Update a list of existing releases
Change-Id: I1c78469235429774fb604b24f8f77fc32190cb16

--- a/deliverables/_independent/rally.yaml
+++ b/deliverables/_independent/rally.yaml
@@ -86,5 +86,33 @@ releases:
     projects:
       - repo: openstack/rally
         hash: 7153e0cbc5b0e6433313a3bc6051b2c0775d3804
+  - version: 0.10.1
+    projects:
+      - repo: openstack/rally
+        hash: 0753973003b11fbd988206b2adbd971774509e8c
+  - version: 0.11.0
+    projects:
+      - repo: openstack/rally
+        hash: 0ba733e5c45d545e12fbc98f2f442fab810b7c52
+  - version: 0.11.1
+    projects:
+      - repo: openstack/rally
+        hash: 7d30a6b9a16862b9a0352e918d7186e3da507a9b
+  - version: 0.11.2
+    projects:
+      - repo: openstack/rally
+        hash: 9fc9876a9ef0fa669cd43cac976c86b2bafba6ce
+  - version: 0.12.0
+    projects:
+      - repo: openstack/rally
+        hash: 6dcaebdc40bf676f9e9e68033cdca3b3962152b7
+  - version: 0.12.1
+    projects:
+      - repo: openstack/rally
+        hash: 099183cbd0d6eeb4d0c08732e9dfdc94a71f82ff
+  - version: 1.0.0
+    projects:
+      - repo: openstack/rally
+        hash: 5dfda156e39693870dcf6c6af89b317a6d57a1d2
 repository-settings:
   openstack/rally: {}
