[rally] Release 1.1.0 version
Change-Id: Ib82d4ca1e2a39c921df2db90f4c9e620a10f70b6

--- a/deliverables/_independent/rally.yaml
+++ b/deliverables/_independent/rally.yaml
@@ -114,5 +114,9 @@ releases:
     projects:
       - repo: openstack/rally
         hash: 5dfda156e39693870dcf6c6af89b317a6d57a1d2
+  - version: 1.1.0
+    projects:
+      - repo: openstack/rally
+        hash: b5ba6d5ea9f8de68f0772453e55dc7da4d98884a
 repository-settings:
   openstack/rally: {}
