Add/update rocky release notes links
Updates libs that have branches stable/rocky to have their release notes
links.

Change-Id: Ibcac601045961d37b28e14c7c4f72bb681f1f6eb
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/deliverables/rocky/neutron-lib.yaml
+++ b/deliverables/rocky/neutron-lib.yaml
@@ -30,3 +30,4 @@ releases:
         hash: 67865c701b6386b82cfed2ea74fe9462a23b7dc7
 repository-settings:
   openstack/neutron-lib: {}
+release-notes: https://docs.openstack.org/releasenotes/neutron-lib/rocky.html
