--- a/deliverables/rocky/osc-lib.yaml
+++ b/deliverables/rocky/osc-lib.yaml
@@ -18,3 +18,4 @@ releases:
 branches:
   - location: 1.11.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/osc-lib/rocky.html
