--- a/deliverables/rocky/oslo.middleware.yaml
+++ b/deliverables/rocky/oslo.middleware.yaml
@@ -18,3 +18,4 @@ releases:
 branches:
   - location: 3.36.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.middleware/rocky.html
