--- a/deliverables/rocky/python-glanceclient.yaml
+++ b/deliverables/rocky/python-glanceclient.yaml
@@ -26,3 +26,4 @@ team: glance
 type: client-library
 repository-settings:
   openstack/python-glanceclient: {}
+release-notes: https://docs.openstack.org/releasenotes/python-glanceclient/rocky.html
