--- a/deliverables/rocky/python-openstackclient.yaml
+++ b/deliverables/rocky/python-openstackclient.yaml
@@ -18,3 +18,4 @@ branches:
     name: stable/rocky
 repository-settings:
   openstack/python-openstackclient: {}
+release-notes: https://docs.openstack.org/releasenotes/python-openstackclient/rocky.html
