--- a/deliverables/rocky/python-tackerclient.yaml
+++ b/deliverables/rocky/python-tackerclient.yaml
@@ -22,3 +22,4 @@ releases:
 branches:
   - name: stable/rocky
     location: 0.14.0
+release-notes: https://docs.openstack.org/releasenotes/python-tackerclient/rocky.html
