--- a/deliverables/rocky/python-vitrageclient.yaml
+++ b/deliverables/rocky/python-vitrageclient.yaml
@@ -20,3 +20,4 @@ releases:
         hash: 76e7198fe9d9b7564fead345587aab9adfc043b6
 cycle-highlights:
   - 'New API for alarm history'
+release-notes: https://docs.openstack.org/releasenotes/python-vitrageclient/rocky.html
