--- a/deliverables/rocky/python-zaqarclient.yaml
+++ b/deliverables/rocky/python-zaqarclient.yaml
@@ -14,3 +14,4 @@ branches:
     location: 1.10.0
 repository-settings:
   openstack/python-zaqarclient: {}
+release-notes: https://docs.openstack.org/releasenotes/python-zaqarclient/rocky.html
