--- a/deliverables/rocky/automaton.yaml
+++ b/deliverables/rocky/automaton.yaml
@@ -14,3 +14,4 @@ releases:
 branches:
   - location: 1.15.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/automaton/rocky.html
