--- a/deliverables/rocky/castellan.yaml
+++ b/deliverables/rocky/castellan.yaml
@@ -13,3 +13,4 @@ releases:
 branches:
   - location: 0.18.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/castellan/rocky.html
