--- a/deliverables/rocky/debtcollector.yaml
+++ b/deliverables/rocky/debtcollector.yaml
@@ -14,3 +14,4 @@ releases:
 branches:
   - location: 1.20.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/debtcollector/rocky.html
