--- a/deliverables/rocky/futurist.yaml
+++ b/deliverables/rocky/futurist.yaml
@@ -14,3 +14,4 @@ releases:
 branches:
   - location: 1.7.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/futurist/rocky.html
