--- a/deliverables/rocky/murano-agent.yaml
+++ b/deliverables/rocky/murano-agent.yaml
@@ -17,3 +17,4 @@ releases:
 branches:
   - name: stable/rocky
     location: 3.5.1
+release-notes: https://docs.openstack.org/releasenotes/murano-agent/rocky.html
