--- a/deliverables/rocky/os-brick.yaml
+++ b/deliverables/rocky/os-brick.yaml
@@ -30,3 +30,4 @@ releases:
 branches:
   - location: 2.5.3
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/os-brick/rocky.html
