--- a/deliverables/rocky/os-client-config.yaml
+++ b/deliverables/rocky/os-client-config.yaml
@@ -26,3 +26,4 @@ releases:
 branches:
   - location: 1.31.2
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/os-client-config/rocky.html
