--- a/deliverables/rocky/os-win.yaml
+++ b/deliverables/rocky/os-win.yaml
@@ -14,3 +14,4 @@ repository-settings:
 branches:
   - location: 4.0.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/os-win/rocky.html
