--- a/deliverables/rocky/oslo.cache.yaml
+++ b/deliverables/rocky/oslo.cache.yaml
@@ -22,3 +22,4 @@ releases:
 branches:
   - location: 1.30.1
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.cache/rocky.html
