--- a/deliverables/rocky/oslo.concurrency.yaml
+++ b/deliverables/rocky/oslo.concurrency.yaml
@@ -18,3 +18,4 @@ releases:
 branches:
   - location: 3.27.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.concurrency/rocky.html
