--- a/deliverables/rocky/oslo.config.yaml
+++ b/deliverables/rocky/oslo.config.yaml
@@ -46,3 +46,4 @@ releases:
 branches:
   - location: 6.4.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.config/rocky.html
