--- a/deliverables/rocky/oslo.context.yaml
+++ b/deliverables/rocky/oslo.context.yaml
@@ -14,3 +14,4 @@ releases:
 branches:
   - location: 2.21.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.context/rocky.html
