--- a/deliverables/rocky/oslo.db.yaml
+++ b/deliverables/rocky/oslo.db.yaml
@@ -38,3 +38,4 @@ releases:
 branches:
   - location: 4.40.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.db/rocky.html
