--- a/deliverables/rocky/oslo.log.yaml
+++ b/deliverables/rocky/oslo.log.yaml
@@ -26,3 +26,4 @@ releases:
 branches:
   - location: 3.39.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.log/rocky.html
