--- a/deliverables/rocky/oslo.messaging.yaml
+++ b/deliverables/rocky/oslo.messaging.yaml
@@ -54,3 +54,4 @@ releases:
 branches:
   - location: 8.1.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.messaging/rocky.html
