--- a/deliverables/rocky/oslo.policy.yaml
+++ b/deliverables/rocky/oslo.policy.yaml
@@ -34,3 +34,4 @@ releases:
 branches:
   - location: 1.38.1
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.policy/rocky.html
