--- a/deliverables/rocky/oslo.privsep.yaml
+++ b/deliverables/rocky/oslo.privsep.yaml
@@ -18,3 +18,4 @@ releases:
 branches:
   - location: 1.29.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.privsep/rocky.html
