--- a/deliverables/rocky/oslo.reports.yaml
+++ b/deliverables/rocky/oslo.reports.yaml
@@ -18,3 +18,4 @@ releases:
 branches:
   - location: 1.28.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.reports/rocky.html
