--- a/deliverables/rocky/oslo.rootwrap.yaml
+++ b/deliverables/rocky/oslo.rootwrap.yaml
@@ -18,3 +18,4 @@ releases:
 branches:
   - location: 5.14.1
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.rootwrap/rocky.html
