--- a/deliverables/rocky/oslo.serialization.yaml
+++ b/deliverables/rocky/oslo.serialization.yaml
@@ -22,3 +22,4 @@ releases:
 branches:
   - location: 2.27.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.serialization/rocky.html
