--- a/deliverables/rocky/oslo.service.yaml
+++ b/deliverables/rocky/oslo.service.yaml
@@ -30,3 +30,4 @@ releases:
 branches:
   - location: 1.31.3
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.service/rocky.html
