--- a/deliverables/rocky/oslo.utils.yaml
+++ b/deliverables/rocky/oslo.utils.yaml
@@ -30,3 +30,4 @@ releases:
 branches:
   - location: 3.36.4
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.utils/rocky.html
