--- a/deliverables/rocky/oslo.versionedobjects.yaml
+++ b/deliverables/rocky/oslo.versionedobjects.yaml
@@ -30,3 +30,4 @@ releases:
 branches:
   - location: 1.33.3
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.versionedobjects/rocky.html
