--- a/deliverables/rocky/oslo.vmware.yaml
+++ b/deliverables/rocky/oslo.vmware.yaml
@@ -38,3 +38,4 @@ releases:
 branches:
   - location: 2.31.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslo.vmware/rocky.html
