--- a/deliverables/rocky/oslotest.yaml
+++ b/deliverables/rocky/oslotest.yaml
@@ -34,3 +34,4 @@ releases:
 branches:
   - location: 3.6.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/oslotest/rocky.html
