--- a/deliverables/rocky/osprofiler.yaml
+++ b/deliverables/rocky/osprofiler.yaml
@@ -26,3 +26,4 @@ releases:
 branches:
   - location: 2.3.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/osprofiler/rocky.html
