--- a/deliverables/rocky/python-ironicclient.yaml
+++ b/deliverables/rocky/python-ironicclient.yaml
@@ -22,3 +22,4 @@ branches:
     name: stable/rocky
 repository-settings:
   openstack/python-ironicclient: {}
+release-notes: https://docs.openstack.org/releasenotes/python-ironicclient/rocky.html
