--- a/deliverables/rocky/python-manilaclient.yaml
+++ b/deliverables/rocky/python-manilaclient.yaml
@@ -26,3 +26,4 @@ branches:
     name: stable/rocky
 repository-settings:
   openstack/python-manilaclient: {}
+release-notes: https://docs.openstack.org/releasenotes/python-manilaclient/rocky.html
