--- a/deliverables/rocky/python-mistralclient.yaml
+++ b/deliverables/rocky/python-mistralclient.yaml
@@ -30,3 +30,4 @@ releases:
       - hash: f0ee48fa72bbbb29b06028f3c2a2600a1636fbe3
         repo: openstack/python-mistralclient
     version: 3.7.0
+release-notes: https://docs.openstack.org/releasenotes/python-mistralclient/rocky.html
