--- a/deliverables/rocky/python-novaclient.yaml
+++ b/deliverables/rocky/python-novaclient.yaml
@@ -22,3 +22,4 @@ releases:
 branches:
   - location: 11.0.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/python-novaclient/rocky.html
