--- a/deliverables/rocky/shade.yaml
+++ b/deliverables/rocky/shade.yaml
@@ -18,3 +18,4 @@ repository-settings:
 branches:
   - location: 1.29.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/shade/rocky.html
