--- a/deliverables/rocky/taskflow.yaml
+++ b/deliverables/rocky/taskflow.yaml
@@ -14,3 +14,4 @@ releases:
 branches:
   - location: 3.2.0
     name: stable/rocky
+release-notes: https://docs.openstack.org/releasenotes/taskflow/rocky.html
