--- a/deliverables/rocky/zaqar-ui.yaml
+++ b/deliverables/rocky/zaqar-ui.yaml
@@ -22,3 +22,4 @@ branches:
     name: stable/rocky
 repository-settings:
   openstack/zaqar-ui: {}
+release-notes: https://docs.openstack.org/releasenotes/zaqar-ui/rocky.html
