--- a/deliverables/rocky/watcher-dashboard.yaml
+++ b/deliverables/rocky/watcher-dashboard.yaml
@@ -6,6 +6,9 @@ team: watcher
 type: horizon-plugin
 repository-settings:
   openstack/watcher-dashboard: {}
+branches:
+  - name: stable/rocky
+    location: 1.11.0
 releases:
   - version: 1.9.0
     projects:
@@ -15,3 +18,7 @@ releases:
     projects:
       - repo: openstack/watcher-dashboard
         hash: 79fcf55752d350911f50515de7c6956185a3bce7
+  - version: 1.11.0
+    projects:
+      - repo: openstack/watcher-dashboard
+        hash: 09de59300f97cf099f2749e5e3fa266a542440cb
