Rocky: Release dashboards under neutron project
This commit releases dashboard plugins under the neutron governances
(with cycle-with-intermediary): neutron-fwaas-dashboard and
neutron-vpnaas-dashboard.
Also cuts stable branches for Rocky.

Change-Id: Ibd8fbfe20f22dc0ca476877898b0dd0371c199ee

--- a/deliverables/rocky/neutron-fwaas-dashboard.yaml
+++ b/deliverables/rocky/neutron-fwaas-dashboard.yaml
@@ -10,3 +10,10 @@ releases:
       - hash: d851e2e5cb3c7d96b4deec6c13d38d21768f2dd1
         repo: openstack/neutron-fwaas-dashboard
     version: 1.4.0
+  - projects:
+      - hash: 5ece747e15896cf998e3787aa07f547fa39e3e44
+        repo: openstack/neutron-fwaas-dashboard
+    version: 1.5.0
+branches:
+  - location: 1.5.0
+    name: stable/rocky
