--- a/deliverables/rocky/neutron-vpnaas-dashboard.yaml
+++ b/deliverables/rocky/neutron-vpnaas-dashboard.yaml
@@ -10,3 +10,10 @@ releases:
       - hash: 74f62d0314e5b3e5fe9ca470eaeef463aaea1373
         repo: openstack/neutron-vpnaas-dashboard
     version: 1.3.0
+  - projects:
+      - hash: e49377a97435a2854d6d0d6509e5ad472f6c4fbc
+        repo: openstack/neutron-vpnaas-dashboard
+    version: 1.4.0
+branches:
+  - location: 1.4.0
+    name: stable/rocky
