--- a/deliverables/_independent/ironic-tempest-plugin.yaml
+++ b/deliverables/_independent/ironic-tempest-plugin.yaml
@@ -12,5 +12,9 @@ releases:
       - hash: e4cfb8bade562628feb404fb2740eac0768893e7
         repo: openstack/ironic-tempest-plugin
     version: 1.1.0
+  - projects:
+      - hash: 3dc8f79c86b5b4dafb1c2ae9e38baae5a725af32
+        repo: openstack/ironic-tempest-plugin
+    version: 1.2.0
 repository-settings:
   openstack/ironic-tempest-plugin: {}
