--- a/deliverables/_independent/virtualbmc.yaml
+++ b/deliverables/_independent/virtualbmc.yaml
@@ -23,5 +23,9 @@ releases:
       - hash: 427de49c25e3506fb8209b49749c03460053e8a7
         repo: openstack/virtualbmc
     version: 1.3.0
+  - projects:
+      - hash: 4e6e901b6cbb635c8576a69063a1c3dd25f2c935
+        repo: openstack/virtualbmc
+    version: 1.4.0
 repository-settings:
   openstack/virtualbmc: {}
