--- a/deliverables/_independent/sushy-tools.yaml
+++ b/deliverables/_independent/sushy-tools.yaml
@@ -15,5 +15,9 @@ releases:
       - hash: bb23d5bc304124ae04495fffed5ecf9e113eb37d
         repo: openstack/sushy-tools
     version: 0.3.0
+  - projects:
+      - hash: 89707034f2cbab6efb000ab20ad55a31a2d53e79
+        repo: openstack/sushy-tools
+    version: 0.4.0
 repository-settings:
   openstack/sushy-tools: {}
