--- a/deliverables/queens/os-brick.yaml
+++ b/deliverables/queens/os-brick.yaml
@@ -33,6 +33,10 @@ releases:
       - hash: 8fab1a01cb03155e05f8a9211b152a4938474575
         repo: openstack/os-brick
     version: 2.3.2
+  - projects:
+      - hash: e211056d650b9be9f7501b1497416c8fc14312d5
+        repo: openstack/os-brick
+    version: 2.3.3
 branches:
   - name: stable/queens
     location: 2.3.0
