--- a/deliverables/rocky/neutron-lbaas-dashboard.yaml
+++ b/deliverables/rocky/neutron-lbaas-dashboard.yaml
@@ -20,3 +20,10 @@ releases:
       - hash: dde6dfb2eba8eb2f1d9cd61986032b512330b281
         repo: openstack/neutron-lbaas-dashboard
     version: 5.0.0.0b3
+  - projects:
+      - hash: dde6dfb2eba8eb2f1d9cd61986032b512330b281
+        repo: openstack/neutron-lbaas-dashboard
+    version: 5.0.0.0rc1
+branches:
+  - location: 5.0.0.0rc1
+    name: stable/rocky
