Add new release of puppet-panko in pike
We need a new release which includes recent backports:

- https://review.openstack.org/540968
- https://review.openstack.org/544598

Depends-On: I91781fb1d10221a025111c6703a100fec28074cd
Change-Id: I83a314779b970753a8e18512b09f65f3c801b620

--- a/deliverables/pike/puppet-panko.yaml
+++ b/deliverables/pike/puppet-panko.yaml
@@ -26,6 +26,10 @@ releases:
       - hash: 026182de717701295b903fb63c908e93ab39fa1c
         repo: openstack/puppet-panko
     version: 11.5.0
+  - projects:
+      - hash: e81a26b1cb1af11829a71342c2e15a0fa6219cc7
+        repo: openstack/puppet-panko
+    version: 11.6.0
 team: 'Puppet OpenStack'
 type: other
 branches:
